# Semester-3

./: README.md
AaDS(Algorithms and Data Structures)/: Task AaDS 1.005 LCS(Longest common subsequence) KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 0.00.0 KD/: Task AaDS 0.00.0 KD.cpp  input.txt
AaDS(Algorithms and Data Structures)/Task AaDS 0.00.1 Binar search KD/: Task AaDS 0.00.1 Binar search KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 1.00.1 The path of frog KD/: Task AaDS 1.00.1 The path of frog KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 1.00.2 Units(part 1) KD/: Task AaDS 1.00.2 Units(part 1, Table) KD.xlsx  Task AaDS 1.00.2 Units(part 1, variant 1) KD.cpp  Task AaDS 1.00.2 Units(part 1, variant 2) KD.cpp  Task AaDS 1.00.2 Units(part 1, variant 3) KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 1.00.3 Units(part 2) KD/: Task AaDS 1.00.3 Units(part 2) KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 1.00.4 Order of matrix multiplication KD/: Task AaDS 1.00.4 Order of matrix multiplication KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 1.00.5 LCS(Longest common subsequence) KD/: Task AaDS 1.00.5 LCS(Longest common subsequence) KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 1.00.6 Palindrome KD/: Task AaDS 1.00.6 Palindrome KD.cpp  input.txt  output.txt
AaDS(Algorithms and Data Structures)/Task AaDS 1.00.7 LIS(Longest increasing subsequence) KD/: Task AaDS 1.00.7 LIS(Longest increasing subsequence) KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 1.58.0 String convolution KD/: Task AaDS 1.58.0 String convolution KD.cpp  Task AaDS 1.58.0 String convolution KD.xlsx
AaDS(Algorithms and Data Structures)/Task AaDS 2.00.1 Build a tree KD/: Task AaDS 2.00.1 Build a tree KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 2.00.2 Remove from tree KD/: Task AaDS 2.00.2 Remove from tree KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 2.00.3 Is a binary tree a search tree KD/: Task AaDS 2.00.3 Is a binary tree a search tree KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 2.23.0 KD/: Task AaDS 2.23.0 KD.cpp  in.txt  out.txt
AaDS(Algorithms and Data Structures)/Task AaDS 3.00.02 Binary heap KD/: Task AaDS 3.00.02 Binary heap KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 3.00.04 Huffman coding (hard version) KD/: Task AaDS 3.00.04 Huffman coding (hard version) KD.cpp  huffman.in
AaDS(Algorithms and Data Structures)/Task AaDS 3.00.08 Sum problem KD/: Task AaDS 3.00.08 Sum problem KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 3.00.10 Hash table KD/: Task AaDS 3.00.10 Hash table KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 3.00.4 Huffman coding (hard version) KD/: huffman.in
AaDS(Algorithms and Data Structures)/Task AaDS 3.00.5 Road construction KD/: Task AaDS 3.00.5 Road construction KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 3.00.7 Destruction of roads (complex version) KD/: Task AaDS 3.00.7 Destruction of roads (complex version) KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 3.00.8 Sum problem KD/: Task AaDS 3.00.8 Sum problem KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 3.10.0 Labyrinth with specific entrance and exit KD/: Task AaDS 3.10.0 Labyrinth with specific entrance and exit KD.cpp  in.txt
AaDS(Algorithms and Data Structures)/Task AaDS 4.00.01 Construct adjacency matrix KD/: Task AaDS 4.00.01 Construct adjacency matrix KD.cpp
AaDS(Algorithms and Data Structures)/Task AaDS 4.00.02 Canonical view (according to the list of arcs) KD/: Main.java  input.txt
AaDS(Algorithms and Data Structures)/Task AaDS 4.00.03 Build adjacency list KD/: Main.java
OS(Operating System)/Coll OS 01.1-2 KD/: CMakeLists.txt  fib.cpp  fib.h  main.cpp  test_fib.cpp  test_fib.h
OS(Operating System)/Colloquiums OS KD/Coll OS 01.1-2 KD/: CMakeLists.txt  bigint.cpp  bigint.h  fib.cpp  fib.h  main.cpp  main.h  test_big_int.cpp  test_big_int.h  test_fib.cpp  test_fib.h
OS(Operating System)/Colloquiums OS KD/Coll OS 01.3-2 KD/: CMakeLists.txt  core.cpp  core.h  linked_list.h  main.cpp  main.h  test_linked_list.cpp  test_linked_list.h
OS(Operating System)/Lab OS 01 KD/: CMakeLists.txt  creator.cpp  creator.h  employee.cpp  employee.h  function.cpp  function.h  header.h  main.cpp  main.h  reporter.cpp  reporter.h
OS(Operating System)/Lab OS 01 KD/tests/: CMakeLists.txt  test_core.cpp  test_core.h  test_creator.cpp  test_creator.h  test_employee.cpp  test_employee.h  test_function.cpp  test_function.h  test_header.h  test_main.cpp  test_reporter.cpp  test_reporter.h
OS(Operating System)/Lab OS 02 KD/: CMakeLists.txt  average.cpp  average.h  core.cpp  core.h  main.cpp  main.h  min_max.cpp  min_max.h  param_structure.cpp  param_structure.h  test_average.cpp  test_average.h  test_core.cpp  test_core.h  test_min_max.cpp  test_min_max.h  test_param_structure.cpp  test_param_structure.h
OS(Operating System)/Lab OS 03 KD/: CMakeLists.txt  ThreadData.cpp  ThreadData.h  core.cpp  core.h  main.cpp  main.h  marker.cpp  marker.h  test_core.cpp  test_core.h  test_marker.cpp  test_marker.h  test_thread_data.cpp  test_thread_data.h  thread_data.cpp  thread_data.h
OS(Operating System)/Lab OS 04 KD/: CMakeLists.txt  circular_queue.cpp  circular_queue.h  common.cpp  common.h  process_manager.cpp  process_manager.h  receiver.cpp  receiver.h  sender.cpp  sender.h  test_circular_queue.cpp  test_circular_queue.h  test_common.cpp  test_namespaces.cpp  test_namespaces.h  test_process_manager.cpp  test_process_manager.h
OS(Operating System)/Lab OS 05 KD/: CMakeLists.txt  client.cpp  client.h  employee.cpp  employee.h  file_manager.cpp  file_manager.h  pipe_manager.cpp  pipe_manager.h  process_manager.cpp  process_manager.h  record_lock.cpp  record_lock.h  server.cpp  server.h  shared_constants.h  test_constants.cpp  test_constants.h  test_employee.cpp  test_employee.h  test_file_manager.cpp  test_file_manager.h  test_pipe_manager.cpp  test_pipe_manager.h  test_process_manager.cpp  test_process_manager.h  test_record_lock.cpp  test_record_lock.h
(+74 files in other folders)
